[package]
name = "thread_runner"
version = "0.2.0"
edition = "2021"
description = "A rust library for executing tasks concurrently"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] }
